[project]
name = "line-echo-bot"
version = "0.1.0"
description = "A simple LINE Echo Bot using Python and Flask"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "line-bot-sdk>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "apify-client>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
